# tax

./: .gitignore  CLAUDE.md  CMakeLists.txt  Doxyfile  MEMORY.md  README.md  ads_boxcount.csv  ads_timing.txt  ads_tree.csv  loads_boxcount.csv  loads_timing.txt  loads_tree.csv  manifolds.json  mkdocs.yml  pyproject.toml  simple_taylor_timing.txt  simple_taylor_traj.csv  validation.json  wsb_loads.json  wsb_search.json
.github/workflows/: regressions.yml  sanitizers.yml  tests.yml
.graphify/: .graphify_analysis.json  .graphify_detect.json  .graphify_labels.json  .graphify_semantic_chunk1.json  .graphify_semantic_chunk2.json  .graphify_semantic_chunk3.json  .graphify_semantic_chunk4.json  .graphify_semantic_chunk5.json  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json  scope.json
bench/: CMakeLists.txt  bench_ops.cpp
benchmarks/: CMakeLists.txt  bench_ads_refine.cpp  bench_ode_cr3bp.cpp  bench_vs_dace.cpp  dynamic_vs_static.cpp  multivariate.cpp  profile_ads_integration.cpp  profile_da_integration.cpp  profile_operations.cpp  profile_operations_multivariate.cpp  profile_operations_univariate.cpp  univariate.cpp
benchmarks/baseline/: MISSING.md
benchmarks/results/: csr_stencil_before_after.md  sparseop_M6.json  tax_vs_dace.md
cmake/: taxConfig.cmake.in
docs/: api_reference.md  dynamic.md  eigen_integration.md  getting_started.md  index.md  math_operations.md  python.md
docs/concepts/: convergence.md  (+2 more)
examples/: CMakeLists.txt  ellipticOrbit.cpp  plotBoxEvolution.py  plotBoxOnSplit.py  plotEllipticOrbit.py  plotTwoBodyAdsComparison.py  plotTwoBodyAdsOrbit.py  plotTwoBodyAdsSnapshots.py  twoBodyAdsComparison.cpp  two_body.cpp
examples/plot/: plot_three_body.py  plot_two_body.py
examples/three_body/: ads.cpp  common.hpp  loads.cpp  manifolds.cpp  plot.py  taylor.cpp
examples/two_body/: ads.cpp  common.hpp  loads.cpp  plot.py  plot_refine.py  plot_validation.py  refine.cpp  simple_taylor.cpp  taylor.cpp  validation.cpp
examples/wsb/: ads.cpp  common.hpp  loads.cpp  plot_box.py  plot_reference.py  plot_search.py  taylor.cpp  wsb_reference.cpp  wsb_search.cpp
python/: CMakeLists.txt
python/src/: bind_factories.cpp  bind_la.cpp  bind_mat.cpp  bind_math.cpp  bind_te.cpp  bind_vec.cpp  common.hpp  tax_module.cpp
python/tax/: __init__.py
python/tests/: test_container_ops.py  test_containers.py  test_la.py  test_numpy_interop.py  test_reductions_factories.py  test_taylor_expansion.py
scripts/: graphify.sh
tests/: CMakeLists.txt  testCombinatorics.cpp  testCompose.cpp  testDA.cpp  testEigenTypes.cpp  testExprAdd.cpp  testExprErf.cpp  testExprLog.cpp  testExprMul.cpp  testExprPower.cpp  testExprTrig.cpp  testExprUnary.cpp  testKernels.cpp  testODETaylor.cpp  testUtils.hpp
tests/ads/: testAdsMerger.cpp  testLowOrderAds.cpp  testNonlinearityIndex.cpp  test_box.cpp  test_da_state.cpp  test_driver.cpp  test_leaf_tree.cpp  test_merge.cpp  test_parallel.cpp  test_refine.cpp
tests/core/: testNested.cpp  test_batch.cpp  test_constexpr.cpp  test_deriv_integ.cpp  test_enumeration.cpp  test_factories.cpp  test_index_scheme.cpp  test_multi_index.cpp  test_named.cpp  test_taylor_expansion_accessors.cpp  test_taylor_expansion_ctor.cpp  test_truncate.cpp
tests/dace/: CMakeLists.txt  testMultivariate.cpp  testUnivariate.cpp
tests/dynamic/: testDynCalculusEval.cpp  testDynExtendedMath2.cpp  testDynOrderTte.cpp  testDynTteArithmetic.cpp  testDynTteConstruct.cpp  testDynTteExtendedMath.cpp
tests/eigen/: testDynamicEigen.cpp  testTensorFunction.cpp  testTensors.cpp  testTypes.cpp  test_eigen_derivative.cpp  test_eigen_eval.cpp  test_eigen_gradient.cpp  test_eigen_hessian.cpp  test_eigen_invert.cpp  test_eigen_jacobian.cpp  test_eigen_numtraits.cpp  test_eigen_variables.cpp  test_expansion_vectors.cpp  test_named_la.cpp  test_norm.cpp  test_vector_ops.cpp
tests/foundation/: testCombinatoricsDynamic.cpp  testDegreeOf.cpp  testShapeBaseEbo.cpp
tests/io/: test_series.cpp
tests/kernels/: testCauchyStencil.cpp  testKernelsRuntime.cpp  test_cauchy_dense.cpp  test_cauchy_stencil_diff.cpp  test_cauchy_unroll_diff.cpp  test_sparse_cauchy.cpp
tests/mixed/: test_mixed_kernels.cpp  test_mixed_la.cpp  test_mixed_named.cpp  test_mixed_named_la.cpp  test_mixed_scheme.cpp  test_mixed_te.cpp
tests/ode/: CMakeLists.txt  cr3bp_problem.hpp  testCR3BPEvents.cpp  testCR3BPPropagation.cpp  testConcepts.cpp  testEvents.cpp  testEventsEveryStep.cpp  testEventsZeroCrossing.cpp  testFeagin12Stepper.cpp  testFehlberg78Stepper.cpp  testFixedStep.cpp  testIntegrateAds.cpp  testIntegratorBasic.cpp  testIntegratorDense.cpp  testIntegratorStatic.cpp  testLowOrderAdsIntegrator.cpp  testParameterIntegrators.cpp  testRKHelpers.cpp  testRKWithDaState.cpp  testSolution.cpp  testTaylorIntegrator.cpp  testTaylorStepper.cpp  testTwoBodyKepler.cpp  testVectorOps.cpp  testVerner78Stepper.cpp  testVernerIntegrator.cpp  test_concepts.cpp  test_controllers.cpp  test_fixed_step.cpp  test_named_state.cpp  test_rk_da_state.cpp  test_rk_helpers.cpp  test_solution.cpp  test_vector_ops.cpp
tests/ode/events/: test_every_step.cpp  test_zero_crossing.cpp
tests/ode/integrator/: test_basic.cpp  test_dense.cpp  test_static.cpp
tests/ode/problems/: cr3bp_problem.hpp  test_cr3bp_events.cpp  test_cr3bp_propagation.cpp  test_two_body_kepler.cpp
tests/ode/steppers/: test_feagin12.cpp  test_feagin14.cpp  test_fehlberg78.cpp  test_taylor.cpp  test_verner78.cpp  test_verner89.cpp
tests/operators/: test_algebra_inverse.cpp  test_algebra_square_cube.cpp  test_arith_dense.cpp  test_erf.cpp  test_exp_log.cpp  test_fused.cpp  test_hyperbolic.cpp  test_inverse_trig.cpp  test_pow.cpp  test_trig.cpp
tests/regression/: CMakeLists.txt  regressionUtils.hpp  testDerivInteg.cpp  testEigenVectorCalc.cpp  testEval.cpp  testInvert.cpp  testMultivariate.cpp  testSentinel.cpp  testUnivariate.cpp
tests/sparse/: testSparseArithmetic.cpp  testSparseCauchy.cpp  testSparseConstruct.cpp  testSparseIntPow.cpp  testSparseSubs.cpp  test_sparse_arith.cpp  test_sparse_conversion.cpp  test_sparse_ctor.cpp  test_sparse_subs.cpp
(+221 files in other folders)
