[build-system]
requires = ["scikit-build-core >= 0.10", "nanobind >= 2"]
build-backend = "scikit_build_core.build"

[project]
name = "tax"
version = "0.1.0"
description = "Truncated Algebraic eXpansions — multivariate Taylor series in Python"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Andrea Pasquale" }]
requires-python = ">= 3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.scikit-build]
cmake.version = ">= 3.28"
cmake.build-type = "Release"
build.verbose = false
wheel.packages = ["python/tax"]

[tool.scikit-build.cmake.define]
TAX_BUILD_PYTHON = "ON"
TAX_BUILD_TEST = "OFF"
TAX_BUILD_BENCHMARK = "OFF"
TAX_BUILD_EXAMPLES = "OFF"
