include(FetchContent)
find_package(benchmark 1.9 QUIET)
if(NOT benchmark_FOUND AND NOT TARGET benchmark::benchmark)
    FetchContent_Declare(benchmark
        GIT_REPOSITORY https://github.com/google/benchmark.git
        GIT_TAG v1.9.4)
    set(BENCHMARK_ENABLE_TESTING OFF CACHE BOOL "" FORCE)
    set(BENCHMARK_ENABLE_GTEST_TESTS OFF CACHE BOOL "" FORCE)
    set(BENCHMARK_ENABLE_INSTALL OFF CACHE BOOL "" FORCE)
    FetchContent_MakeAvailable(benchmark)
endif()
function(tax_add_bench name)
    cmake_parse_arguments(B "" "" "SOURCES" ${ARGN})
    add_executable(${name} ${B_SOURCES})
    target_link_libraries(${name} PRIVATE tax benchmark::benchmark)
endfunction()
