include(FetchContent)
find_package(GTest QUIET)
if(NOT GTest_FOUND)
    FetchContent_Declare(googletest
        GIT_REPOSITORY https://github.com/google/googletest.git
        GIT_TAG v1.17.0)
    set(BUILD_GMOCK OFF CACHE BOOL "" FORCE)
    set(INSTALL_GTEST OFF CACHE BOOL "" FORCE)
    FetchContent_MakeAvailable(googletest)
endif()
# Tests are added by subsequent slices via tax_add_test(name SOURCES files...).
function(tax_add_test name)
    cmake_parse_arguments(T "" "" "SOURCES" ${ARGN})
    add_executable(${name} ${T_SOURCES})
    target_link_libraries(${name} PRIVATE tax GTest::gtest GTest::gtest_main)
    add_test(NAME ${name} COMMAND ${name})
endfunction()

tax_add_test(test_multi_index SOURCES core/test_multi_index.cpp)
tax_add_test(test_enumeration SOURCES core/test_enumeration.cpp)
tax_add_test(test_taylor_expansion_ctor SOURCES core/test_taylor_expansion_ctor.cpp)
tax_add_test(test_taylor_expansion_accessors SOURCES core/test_taylor_expansion_accessors.cpp)
tax_add_test(test_truncate SOURCES core/test_truncate.cpp)
tax_add_test(test_series SOURCES io/test_series.cpp)
tax_add_test(test_arith_dense SOURCES operators/test_arith_dense.cpp)
tax_add_test(test_cauchy_dense SOURCES kernels/test_cauchy_dense.cpp)
tax_add_test(test_cauchy_unroll_diff SOURCES kernels/test_cauchy_unroll_diff.cpp)
tax_add_test(test_cauchy_stencil_diff SOURCES kernels/test_cauchy_stencil_diff.cpp)
tax_add_test(test_algebra_square_cube SOURCES operators/test_algebra_square_cube.cpp)
tax_add_test(test_algebra_inverse SOURCES operators/test_algebra_inverse.cpp)
tax_add_test(test_pow SOURCES operators/test_pow.cpp)
tax_add_test(test_exp_log SOURCES operators/test_exp_log.cpp)
tax_add_test(test_hyperbolic SOURCES operators/test_hyperbolic.cpp)
tax_add_test(test_erf SOURCES operators/test_erf.cpp)
tax_add_test(test_trig SOURCES operators/test_trig.cpp)
tax_add_test(test_inverse_trig SOURCES operators/test_inverse_trig.cpp)
tax_add_test(test_deriv_integ SOURCES core/test_deriv_integ.cpp)
tax_add_test(test_named SOURCES core/test_named.cpp)
tax_add_test(test_batch SOURCES core/test_batch.cpp)
tax_add_test(test_index_scheme SOURCES core/test_index_scheme.cpp)
tax_add_test(test_mixed_scheme SOURCES mixed/test_mixed_scheme.cpp)
tax_add_test(test_mixed_kernels SOURCES mixed/test_mixed_kernels.cpp)
tax_add_test(test_sparse_ctor       SOURCES sparse/test_sparse_ctor.cpp)
tax_add_test(test_sparse_conversion SOURCES sparse/test_sparse_conversion.cpp)
tax_add_test(test_sparse_arith      SOURCES sparse/test_sparse_arith.cpp)
tax_add_test(test_sparse_cauchy     SOURCES kernels/test_sparse_cauchy.cpp)
tax_add_test(test_sparse_subs       SOURCES sparse/test_sparse_subs.cpp)

# Eigen integration — slice 11
tax_add_test(test_eigen_numtraits   SOURCES eigen/test_eigen_numtraits.cpp)
tax_add_test(test_eigen_variables   SOURCES eigen/test_eigen_variables.cpp)
tax_add_test(test_eigen_eval        SOURCES eigen/test_eigen_eval.cpp)
tax_add_test(test_eigen_derivative  SOURCES eigen/test_eigen_derivative.cpp)

# Eigen integration — slice 12
tax_add_test(test_eigen_gradient    SOURCES eigen/test_eigen_gradient.cpp)
tax_add_test(test_eigen_hessian     SOURCES eigen/test_eigen_hessian.cpp)
tax_add_test(test_eigen_jacobian    SOURCES eigen/test_eigen_jacobian.cpp)
tax_add_test(test_eigen_invert      SOURCES eigen/test_eigen_invert.cpp)
tax_add_test(test_named_la          SOURCES eigen/test_named_la.cpp)
